<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fr_ma_settings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"/>

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/rb_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/rb_yandex"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yandex" />
        <RadioButton
            android:id="@+id/rb_bing"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bing" />

    </RadioGroup>
</LinearLayout>