<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fr_ma_find"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/request"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/b_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/search"/>
</LinearLayout>